--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,6 @@
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.14",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
-    "theme-change": "^2.5.0"
+    "tailwindcss": "^3.4.15"
   }
 }
